2013-02-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Fixed the update of the
	inventory changes black list on setup for bug 3604298

2013-02-12  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_warning_status.php
	include/help/en/help_critical_status.php
	include/help/es/help_warning_status.php
	include/help/es/help_critical_status.php: Improved the
	really poor help of warning and critical status for
	bug 3600787

	* godmode/agentes/module_manager_editor_common.php: Added
	checks to hide de useless status threshold. Now
	the min and max thresholds are shown only in numeric modules
	and the string field only in string ones

2013-02-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	operation/agentes/estado_ultimopaquete.php
	operation/agentes/estado_monitores.php: Protect the data
	of the string modules from the numeric format
	in the visualization for bug 3600790
	Added snapshot feature to the data view of the modules

2013-02-12  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/configurar_agente.php: Changed the call of 
	an Enterprise function to use HOOK to avoid errors in
	Open version

2013-02-12  Sancho Lerena <slerena@artica.es>

        * extensions/update_manager/load_updatemanager.php
        extensions/update_manager/settings.php
        extensions/update_manager/main.php: removed binary system in 
        update manager. Removed two fields in setup and reformatted
        popup window on update info. This goes in 4.0.3 SP1.

2013-02-12  Sergio Martin <sergio.martin@artica.es>

	* extensions/plugin_registration.php: Added a extra Parameter in the 
	conversion of plugins version 1 to 2

2013-02-12  Sergio Martin <sergio.martin@artica.es>

	* extensions/plugin_registration.php: Recommit the last fix of
	plugin registration

2012-02-12  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: tserver table type is now InnoDB after modifying