@@ -1,3 +1,11 @@
+2013-02-12 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/agentes/planned_downtime.list.php,
+	godmode/agentes/planned_downtime.editor.php: fixed the planned
+	downtime.
+	
+	Fixes: #3602365
+
 2013-02-12  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_config.php: Fixed the update of the
